// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePictureField when in active state renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderColor": "rgba(4, 71, 47, 0.75)",
          "borderRadius": 50,
          "borderStyle": "dashed",
          "borderWidth": 2,
          "margin": 5,
          "marginRight": 10,
          "padding": 2,
        },
        null,
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../app/assets/images/profile-pic-annon.png",
        }
      }
      style={
        Object {
          "backgroundColor": "rgba(4, 71, 47, 0.75)",
          "borderRadius": 50,
          "height": 100,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
  </View>
  <ButtonSubmit
    display="active"
    label="Adicionar foto"
    onPress={[Function]}
    small={true}
  />
</View>
`;

exports[`ProfilePictureField when in error state renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "marginBottom": 20,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderColor": "rgba(4, 71, 47, 0.75)",
          "borderRadius": 50,
          "borderStyle": "dashed",
          "borderWidth": 2,
          "margin": 5,
          "marginRight": 10,
          "padding": 2,
        },
        Object {
          "borderColor": "rgb(208, 2, 27)",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../app/assets/images/profile-pic-annon.png",
        }
      }
      style={
        Object {
          "backgroundColor": "rgba(4, 71, 47, 0.75)",
          "borderRadius": 50,
          "height": 100,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
  </View>
  <ButtonSubmit
    display="error"
    label="Adicionar foto"
    onPress={[Function]}
    small={true}
  />
</View>
`;
